--- a/src/common.css
+++ b/src/common.css
@@ -2,11 +2,21 @@
   --body-color: rgba(0, 0, 0, 0.87); /* TODO вынести в глобальные переменные*/
 }
 
+html {
+  min-height: 100%;
+  height: 100%;
+}
+
 body {
+  height: 100%;
   margin: 0;
   font-family: 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   background-color: var(--body-color);
   color: #fff;
+}
+
+:global(#app) {
+  height: 100%;
 }
 
 a {
@@ -19,4 +29,5 @@ a {
 
 .layout {
   display: flex;
+  height: 100%;
 }
