--- a/src/common.css
+++ b/src/common.css
@@ -20,21 +20,20 @@
 }
 
 html {
-  min-height: 100%;
-  height: 100%;
+  min-height: 100vh;
+  height: 100vh;
 }
 
 body {
-  height: 100%;
+  height: 100vh;
   margin: 0;
-  /* font-family: 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; */
   font-family: 'Century Gothic', 'Helvetica Light', Arial, sans-serif;
   background-color: var(--body-color);
   color: #fff;
 }
 
 :global(#app) {
-  height: 100%;
+  min-height: 100vh;
 }
 
 a {
@@ -47,5 +46,5 @@ a {
 
 .layout {
   display: flex;
-  height: 100%;
+  min-height: 100vh;
 }
