--- a/src/components/navigation/styles.css
+++ b/src/components/navigation/styles.css
@@ -1,7 +1,10 @@
 .navigation {
   padding-top: 20px;
   width: 200px;
-  border-right: 1px solid #666;
+
+  &.theme_night {
+    border-right: 1px solid #666;
+  }
 }
 
 .list {
