--- a/src/components/navigation/styles.css
+++ b/src/components/navigation/styles.css
@@ -1,5 +1,6 @@
 .navigation {
-  padding-top: 20px;
+  padding-top: 100px;
+  padding-left: 110px;
   width: var(--sidebar-width);
   min-width: var(--sidebar-width);
 
@@ -19,7 +20,7 @@
 
   & a {
     display: block;
-    padding: 3px 20px;
+    padding: 0 20px;
     text-decoration: none;
   }
 
