--- a/src/components/slider/styles.css
+++ b/src/components/slider/styles.css
@@ -1,11 +1,13 @@
 .wrapper {
   height: calc(100vh - 200px);
-  border: 1px solid #000;
-  overflow: hidden;
+  box-shadow:
+    0 -15px 0 0 #fff,
+    2px -15px 0 0 #000,
+    -2px -15px 0 0 #000;
 }
 
 .slider {
-  transform: translate3d(-33.333%, 0, 0); /* TODO js */
+  position: relative;
   width: 300%; /* TODO js */
   height: 100%;
   list-style: none;
@@ -19,11 +21,32 @@
   height: 100%;
   display: inline-block;
   margin: 0;
-  /* padding: 100px; */
-  padding: 1%;
+  padding: 50px;
   text-align: center;
+  box-shadow:
+    inset 0 2px 0 0 #000,
+    inset 0 -15px 0 0 #fff,
+    inset 0 -17px 0 0 #000;
 }
 
 .slideContent {
   height: 100%;
+}
+
+.track {
+  position: absolute;
+  height: 3px;
+  right: 2px;
+  bottom: 8px;
+  left: 2px;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.thumb {
+  position: relative;
+  display: block;
+  height: 100%;
+  cursor: pointer;
+  border-radius: inherit;
+  background-color: #fff;
 }
