--- a/src/components/slider/styles.css
+++ b/src/components/slider/styles.css
@@ -1,9 +1,17 @@
 .wrapper {
+  position: relative;
   height: calc(100vh - 200px);
-  box-shadow:
-    0 -15px 0 0 #fff,
-    2px -15px 0 0 #000,
-    -2px -15px 0 0 #000;
+  box-shadow: 0 2px 0 2px #000;
+
+  &::after {
+    content: '';
+    position: absolute;
+    left: -2px;
+    right: -2px;
+    bottom: -4px;
+    height: 14px;
+    background-color: #fff;
+  }
 }
 
 .slider {
@@ -21,12 +29,12 @@
   height: 100%;
   display: inline-block;
   margin: 0;
-  padding: 50px;
+  padding: 50px 0 55px;
   text-align: center;
   box-shadow:
     inset 0 2px 0 0 #000,
-    inset 0 -15px 0 0 #fff,
-    inset 0 -17px 0 0 #000;
+    inset 0 -10px 0 0 #fff,
+    inset 0 -12px 0 0 #000;
 }
 
 .slideContent {
@@ -35,9 +43,10 @@
 
 .track {
   position: absolute;
-  height: 3px;
+  z-index: 1;
+  height: 3px !important;
   right: 2px;
-  bottom: 8px;
+  bottom: 4px;
   left: 2px;
   background-color: rgba(0, 0, 0, 0.2);
 }
