--- a/src/components/slider/styles.css
+++ b/src/components/slider/styles.css
@@ -16,7 +16,7 @@
 
 .slider {
   position: relative;
-  width: 300%; /* TODO js */
+  width: 100%;
   height: 100%;
   list-style: none;
   margin: 0;
@@ -25,7 +25,6 @@
 }
 
 .slide {
-  width: 33.3333%; /* TODO js */
   height: 100%;
   display: inline-block;
   margin: 0;
