--- a/src/components/navigation/styles.css
+++ b/src/components/navigation/styles.css
@@ -1,6 +1,5 @@
 .navigation {
   padding-top: 100px;
-  padding-left: 30px;
   width: var(--sidebar-width);
   min-width: var(--sidebar-width);
 
@@ -20,7 +19,7 @@
 
   & a {
     display: block;
-    padding: 0 20px;
+    padding: 0 20px 0 50px;
     text-decoration: none;
   }
 
