--- a/src/components/slider/styles.css
+++ b/src/components/slider/styles.css
@@ -1,4 +1,4 @@
-.wrapper {
+.slider {
   position: relative;
   height: calc(100vh - 200px);
   box-shadow: 0 2px 0 2px #000;
@@ -14,14 +14,10 @@
   }
 }
 
-.slider {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  transition: transform 1s ease;
+.sliderContent {
+  &.theme_night {
+
+  }
 }
 
 .slide {
@@ -38,23 +34,4 @@
 
 .slideContent {
   height: 100%;
-}
-
-.track {
-  position: absolute;
-  z-index: 1;
-  height: 3px !important;
-  right: 2px;
-  bottom: 4px;
-  left: 2px;
-  background-color: rgba(0, 0, 0, 0.2);
-}
-
-.thumb {
-  position: relative;
-  display: block;
-  height: 100%;
-  cursor: pointer;
-  border-radius: inherit;
-  background-color: #fff;
 }
